Rewrite examples with STD thread.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,3 @@
-if(UNIX)
-    add_definitions(-D_GLIBCXX_USE_WCHAR_T -std=c++11)
-endif()
-
 add_executable(hello1 hello1.cpp)
 add_executable(hello2 hello2.cpp)
 add_executable(hello3 hello3.cpp)
@@ -19,10 +15,12 @@ add_executable(cv2 cv2.cpp)
 
 add_executable(bounded_buffer bounded_buffer.cpp)
 
-add_executable(win32_semaphore win32_semaphore.cpp)
+add_executable(semaphore_win32 semaphore_win32.cpp)
 add_executable(semaphore semaphore.cpp)
 
-add_executable(pool pool.cpp)
+add_executable(thread_pool thread_pool.cpp)
 
 add_executable(rwlock1 rwlock1.cpp)
-add_executable(rwlock2 rwlock2.cpp)
+
+# upgrade_lock is Boost only.
+# add_executable(rwlock2_upgrade rwlock2_upgrade.cpp)
